Configure Formspree for contact and quote forms, remove Python backend, prepare for Vercel deployment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coteknia - Tecnología, Papelería y Coworking en un Solo Lugar</title>
+    <title>Coteknia - Tecnología y Papelería en un Solo Lugar</title>
     
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Batangas&display=swap" rel="stylesheet">
