Update email from gerencia to coteknia@grupodempha.com.do

--- a/contacto.html
+++ b/contacto.html
@@ -83,7 +83,7 @@
                     <div class="info-card">
                         <div class="info-icon">📧</div>
                         <h4>Email</h4>
-                        <p><a href="mailto:gerencia@grupodempha.com.do">gerencia@grupodempha.com.do</a></p>
+                        <p><a href="mailto:coteknia@grupodempha.com.do">coteknia@grupodempha.com.do</a></p>
                     </div>
                     <div class="info-card">
                         <div class="info-icon">📱</div>
