Add email and phone fields to quote form

--- a/contacto.html
+++ b/contacto.html
@@ -140,6 +140,14 @@
                                 <input id="quoteCompany" name="company" type="text" placeholder="Tu empresa" required>
                             </div>
                             <div class="form-group">
+                                <label for="quoteEmail">Correo electrónico<span class="required">*</span></label>
+                                <input id="quoteEmail" name="email" type="email" placeholder="tu@email.com" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="quotePhone">Teléfono<span class="required">*</span></label>
+                                <input id="quotePhone" name="phone" type="tel" placeholder="(809) 000-0000" required>
+                            </div>
+                            <div class="form-group">
                                 <label for="quoteMessage">Detalle de productos</label>
                                 <textarea id="quoteMessage" name="message" rows="4" placeholder="Lista de productos que deseas cotizar"></textarea>
                             </div>
